class LogicComponent {
public:
    virtual void computeOutput() = 0;
};
